Fix bootstrap card image distortion

--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -4,6 +4,7 @@
 
 .card-img-top { 
     height: 200px;
+    object-fit: cover;
   }
   
 .card-footer {
